# DWMPC

./: .gitmodules  CMakeLists.txt  README.md  backacados_ocp.json  frontacados_ocp.json  generate_ocp.py  setup.sh
c_generated_code/: Makefile  acados_sim_solver_FL.c  acados_sim_solver_FL.h  acados_sim_solver_FR.c  acados_sim_solver_FR.h  acados_sim_solver_RL.c  acados_sim_solver_RL.h  acados_sim_solver_RR.c  acados_sim_solver_RR.h  acados_sim_solver_back.h  acados_solver.pxd  acados_solver_FL.c  acados_solver_FL.h  acados_solver_FR.c  acados_solver_FR.h  acados_solver_RL.c  acados_solver_RL.h  acados_solver_RR.c  acados_solver_RR.h  acados_solver_back.c  acados_solver_back.h  acados_solver_front.c  acados_solver_front.h  main_FL.c  main_FR.c  main_RL.c  main_RR.c  main_front.c  main_sim_FL.c  main_sim_FR.c  main_sim_RL.c  main_sim_RR.c  main_sim_back.c  main_sim_front.c
c_generated_code/FL_constraints/: FL_constr_h_fun.c  FL_constr_h_fun_jac_uxt_zt.c  FL_constraints.h
c_generated_code/FL_cost/: FL_cost.h  FL_cost_y_0_fun.c  FL_cost_y_0_fun_jac_ut_xt.c  FL_cost_y_0_hess.c  FL_cost_y_e_fun.c  FL_cost_y_e_fun_jac_ut_xt.c  FL_cost_y_e_hess.c  FL_cost_y_fun.c  FL_cost_y_fun_jac_ut_xt.c  FL_cost_y_hess.c
c_generated_code/FL_model/: FL_dyn_disc_phi_fun.c  FL_dyn_disc_phi_fun_jac.c  FL_model.h
c_generated_code/FR_constraints/: FR_constr_h_fun.c  FR_constr_h_fun_jac_uxt_zt.c  FR_constraints.h
c_generated_code/FR_cost/: FR_cost.h  FR_cost_y_0_fun.c  FR_cost_y_0_fun_jac_ut_xt.c  FR_cost_y_0_hess.c  FR_cost_y_e_fun.c  FR_cost_y_e_fun_jac_ut_xt.c  FR_cost_y_e_hess.c  FR_cost_y_fun.c  FR_cost_y_fun_jac_ut_xt.c  FR_cost_y_hess.c
c_generated_code/FR_model/: FR_dyn_disc_phi_fun.c  FR_dyn_disc_phi_fun_jac.c  FR_model.h
c_generated_code/RL_constraints/: RL_constr_h_fun.c  RL_constr_h_fun_jac_uxt_zt.c  RL_constraints.h
c_generated_code/RL_cost/: RL_cost.h  RL_cost_y_0_fun.c  RL_cost_y_0_fun_jac_ut_xt.c  RL_cost_y_0_hess.c  RL_cost_y_e_fun.c  RL_cost_y_e_fun_jac_ut_xt.c  RL_cost_y_e_hess.c  RL_cost_y_fun.c  RL_cost_y_fun_jac_ut_xt.c  RL_cost_y_hess.c
c_generated_code/RL_model/: RL_dyn_disc_phi_fun.c  RL_dyn_disc_phi_fun_jac.c  RL_model.h
c_generated_code/RR_constraints/: RR_constr_h_fun.c  RR_constr_h_fun_jac_uxt_zt.c  RR_constraints.h
c_generated_code/RR_cost/: RR_cost.h  RR_cost_y_0_fun.c  RR_cost_y_0_fun_jac_ut_xt.c  RR_cost_y_0_hess.c  RR_cost_y_e_fun.c  RR_cost_y_e_fun_jac_ut_xt.c  RR_cost_y_e_hess.c  RR_cost_y_fun.c  RR_cost_y_fun_jac_ut_xt.c  RR_cost_y_hess.c
c_generated_code/RR_model/: RR_dyn_disc_phi_fun.c  RR_dyn_disc_phi_fun_jac.c  RR_model.h
c_generated_code/back_constraints/: back_constr_h_fun.c  back_constr_h_fun_jac_uxt_zt.c
c_generated_code/back_cost/: back_cost.h  back_cost_y_0_fun.c  back_cost_y_0_fun_jac_ut_xt.c  back_cost_y_0_hess.c  back_cost_y_e_fun.c  back_cost_y_e_fun_jac_ut_xt.c  back_cost_y_e_hess.c  back_cost_y_fun.c  back_cost_y_fun_jac_ut_xt.c  back_cost_y_hess.c
c_generated_code/back_model/: back_dyn_disc_phi_fun.c
c_generated_code/front_constraints/: front_constr_h_fun.c  front_constr_h_fun_jac_uxt_zt.c
c_generated_code/front_cost/: front_cost_y_0_fun.c  front_cost_y_0_fun_jac_ut_xt.c  front_cost_y_0_hess.c  front_cost_y_e_fun.c  front_cost_y_e_fun_jac_ut_xt.c  front_cost_y_e_hess.c  front_cost_y_fun.c  front_cost_y_fun_jac_ut_xt.c  front_cost_y_hess.c
c_generated_code/front_model/: front_dyn_disc_phi_fun.c
c_generated_code/old_model/: acados_solver.pxd  acados_solver_back.h  acados_solver_front.c  acados_solver_front.h  main_sim_front.c
c_generated_code/old_model_083/: acados_sim_solver_front.c  main_sim_back.c
config/: config.yaml
example/: sim_dwmpc.py
githooks/: pre-merge-commit  update_version
include/: dwmpc.hpp  dwocp.hpp  timer.hpp
module/: CMakeLists.txt
module/c_generated_code/: Makefile  acados_solver_back.c  acados_solver_back.h  acados_solver_front.c  acados_solver_front.h  main_back.c  main_front.c
module/c_generated_code/back_constraints/: back_constr_h_fun.c  back_constr_h_fun_jac_uxt_zt.c
module/c_generated_code/back_cost/: back_cost_y_0_fun.c  back_cost_y_0_fun_jac_ut_xt.c  back_cost_y_0_hess.c  back_cost_y_e_fun.c  back_cost_y_e_fun_jac_ut_xt.c  back_cost_y_e_hess.c  back_cost_y_fun.c  back_cost_y_fun_jac_ut_xt.c  back_cost_y_hess.c
module/c_generated_code/back_model/: back_dyn_disc_phi_fun.c
module/c_generated_code/front_constraints/: front_constr_h_fun.c  front_constr_h_fun_jac_uxt_zt.c  front_constr_h_fun_jac_uxt_zt_hess.c
module/c_generated_code/front_cost/: front_cost_y_0_fun_jac_ut_xt.c  front_cost_y_0_hess.c  front_cost_y_e_fun.c  front_cost_y_e_fun_jac_ut_xt.c  front_cost_y_e_hess.c  front_cost_y_fun_jac_ut_xt.c  front_cost_y_hess.c
module/c_generated_code/old_model/: acados_sim_solver_back.c  acados_sim_solver_front.h  main_back.c
module/c_generated_code/old_model/back_constraints/: back_constr_h_0_fun_jac_uxt_zt.c
module/c_generated_code/old_model/front_constraints/: front_constr_h_0_fun.c  front_constr_h_0_fun_jac_uxt_zt.c
module/c_generated_code/old_model/front_cost/: front_cost.h  front_cost_y_e_fun.c  front_cost_y_e_fun_jac_ut_xt.c  front_cost_y_fun.c
module/config/: config.yaml
module/include/controllers/dwmpc/: acadosInterface.hpp  distributed_solver.hpp  dwmpc.hpp
module/src/: acadosInterface.cpp  distributed_solver.cpp  dwmpc.cpp  py_dwmpc.cpp  test.cpp
plugin/console_commands/: CMakeLists.txt
plugin/console_commands/include/controllers/dwmpc/: console_commands.hpp
plugin/console_commands/src/: console_commands.cpp
plugin/core/: CMakeLists.txt
plugin/core/config/: scheduler.yaml
plugin/core/include/controllers/dwmpc/: plugin.hpp
plugin/core/src/: plugin.cpp
plugin/messages/: CMakeLists.txt
plugin/messages/cmake/: dls_message.cmake
plugin/topics/: CMakeLists.txt
plugin/topics/include/controllers/dwmpc/: topics.hpp
plugin/topics/src/: topics.cpp
script/: generate_ocp.py
src/: acadosInterface.cpp  distributed_solver.cpp  dwmpc.cpp  dwocp.cpp  py_dwmpc.cpp  timer.cpp
test/: test.cpp
urdf/: aliengo.urdf  go1.urdf
(+38 files in other folders)
